feat: add sign-in page, finished callbackUrl & sign-in functionality

--- a/assets/styles/globals.css
+++ b/assets/styles/globals.css
@@ -115,3 +115,14 @@
   animation: spin 1s linear infinite;
 }
 
+
+
+@layer base {
+  * {
+    @apply border-border outline-ring/50;
+  }
+  body {
+    @apply bg-background text-foreground;
+  }
+}
+
